--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "easy-peasy": "^3.3.0",
+    "eslint": "^6.8.0",
     "history": "^4.10.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
