--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "easy-peasy": "^3.3.0",
     "eslint": "^6.8.0",
     "history": "^4.10.1",
+    "prettier": "^1.19.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
